--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 					<div class="title">Introduction</div>
 					<div class="container">
 						<p class="style1"></p>
-												<!-- Image -->
+												<!-- Image 
 													<a href="#" class="image centered">
 														<img src="images/introduction.png" alt="" width="400" height="400" />
 													</a>
+												-->
 						<p class="style3">I am a junior environmental science professional with a passion for remote sensing and geoscience</p>
 					</div>
 				</section>
