--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
 									<h2>Combining observations, research and analytics for environmental solutions</h2>
 									<p> A brief overview </p>
 							</header>
-						<!--Timeline-->
+							
+							<!-- Image-->
+													<a href="#" class="image centered">
+														<img src="images/timeline.png" alt=""/>
+													</a>
+						<!--Timeline
 							<section id="features" class="ps-timeline-sec">
 							        <div class="container">
 							            <ol class="ps-timeline">
@@ -113,6 +118,8 @@
 							            </ol>
 							        </div>
 							</section>
+						-->
+							
 							<article>
 								<p class="style4">Recent advances in remote sensing technology and earth observation sciences has enabled us to study pressing
 									problems with great detail. My career as a junior environmental science professional began in November 2019
