--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 			<!-- Details -->
-				<section id="intro" class="wrapper style3">
+				<section id="main" class="wrapper style3">
 					<div class="title">The Details</div>
 						<div class="container">
 							
