--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="container">
 						<p class="style1"></p>
 													<a href="#" class="image centered">
-														<img src="images/introduction.png" alt="" width="400" height=auto />
+														<img src="images/introduction.png" alt="" width=auto height=auto />
 													</a>
 						<p class="style3">I am a junior environmental science professional with a passion for remote sensing and geoscience</p>
 					</div>
