--- a/index.html
+++ b/index.html
@@ -48,84 +48,86 @@
 				<section id="intro" class="wrapper style7">
 					<div class="title">Introduction</div>
 					<div class="container">
-						<p class="style1"></p>
-													<a href="#" class="image centered">
-														<img src="images/introduction.png" alt="" width=auto height=auto />
+
+													<a href="#">
+														<img src="images/introduction.png" alt="" class="img-fluid"/>
 													</a>
+
 						<p class="style3">I am a junior environmental science professional with a passion for remote sensing and geoscience</p>
 					</div>
-				</section>
-
+			</section>
 
 			<!-- Details -->
-				<section id="intro" class="wrapper style3">
+				<section id="intro" class="wrapper style5">
 					<div class="title">The Details</div>
-						<div class="container">
-							
 							<header class="style1">
 									<h2>Combining observations, research and analytics for environmental solutions</h2>
 									<p> A brief overview </p>
-							</header>			
-						<!--Timeline-->
-							<section id="features" class="ps-timeline-sec">
-							        <div class="container">
-							            <ol class="ps-timeline">
-							                <li>
-							                    <div class="img-handler-top">
-							                        <img src="images/garsfontein.png" width="200" height="200" border=" alt=""/>
-							                    </div>
-							                    <div class="ps-bot">
-							                        Completed high school diploma at Hoërskool Garsfontein.
-							                    </div>
-							                    <span class="ps-sp-top">2016</span>
-							                </li>
-							                <li>
-							                    <div class="img-handler-bot">
-							                        <img src="images/potch.png" width="200" height="200" alt=""/>
-							                    </div>
-							                    <div class="ps-top">
-										Started working at Climatology Research Group (CRG), North-West University (NWU).
-										Finished undergraduate degree at NWU.
+							</header>
+							<div class="container">
+							<p>
+								Recent advances in remote sensing technology and earth observation sciences has enabled us to study pressing
+								problems with great detail. My career as a junior environmental science professional began in November 2019
+								when I started working at the North-West University, Climatology Research Group whilst
+								completing my undergraduate studies. Since, I have been actively involved in several multi-disciplinary projects and research
+								campaigns. I have a passion for remote sensing, GIS and earth observation technology. The integration of observations,
+								theory and data analytics is of great interest to me and hence my expertise.
+							</p>
+						</div>
+					</section>
 
-							                    </div>
-							                    <span class="ps-sp-bot">2019</span>
-							                </li>
-							                <li>
-							                    <div class="img-handler-top">
-							                        <img src="images/potch.png" width="200" height="200" alt=""/>
-							                    </div>
-							                    <div class="ps-bot">
-							                        Completed BSc Honours in Environmental Science at NWU whilts working as a research asssitant at the CRG.
-							                    </div>
-							                    <span class="ps-sp-top">2020</span>
-							                </li>
-							                <li>
-							                    <div class="img-handler-bot">
-							                        <img src="images/potch.png" width="200" height="200 alt=""/>
-							                    </div>
-							                    <div class="ps-top">
-							                        Started working as a research intern at the CRG.
-										Enrolled for a Masters in Environmental Science in 2022.
-							                    </div>
-							                    <span class="ps-sp-bot">2021</span>
-							                </li>
-							            </ol>
-							        </div>
-							</section>
-							
-							<article>
-								<p class="style4">Recent advances in remote sensing technology and earth observation sciences has enabled us to study pressing
-									problems with great detail. My career as a junior environmental science professional began in November 2019
-									when I started working at the North-West University, Climatology Research Group whilst
-									completing my undergraduate studies. Since, I have been actively involved in several multi-disciplinary projects and research
-									campaigns. I have a passion for remote sensing, GIS and earth observation technology. The integration of observations,
-									theory and data analytics is of great interest to me and hence my expertise.
-								</p>
-							</article>
+ 			<!-- Timeline-->
+					<section id="Timeline" class="wrapper style5">
+							<div class="container">
+									<ul class="timeline">
+											<li>
+													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/garsfontein.png" alt="..." /></div>
+													<div class="timeline-panel">
+															<div class="timeline-heading">
+																	<h1>2016</h1>
+															</div>
+															<div class="timeline-body"><p class="text-muted">Completed High School diploma at Hoërskool Garsfontein.</p></div>
+													</div>
+											</li>
+											<li class="timeline-inverted">
+													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
+													<div class="timeline-panel">
+															<div class="timeline-heading">
+																	<h1>2019</h1>
+															</div>
+															<div class="timeline-body"><p class="text-muted">Started working at Climatology Research Group (CRG), North-West University (NWU).
+										          Finished undergraduate degree at NWU.</p></div>
+													</div>
+											</li>
+											<li>
+													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
+													<div class="timeline-panel">
+															<div class="timeline-heading">
+																	<h1>2020</h1>
+															</div>
+															<div class="timeline-body"><p class="text-muted">Completed BSc Honours in Environmental Science at NWU whilts working as a research asssitant at the CRG.</p></div>
+													</div>
+											</li>
+											<li class="timeline-inverted">
+													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
+													<div class="timeline-panel">
+															<div class="timeline-heading">
+																	<h1>2021</h1>
+															</div>
+															<div class="timeline-body"><p class="text-muted">Started working as a research intern at the CRG.
+										          Enrolled for a Masters in Environmental Science in 2022.</p></div>
+													</div>
+											</li>
+									</ul>
+							</div>
+					</section>
+
+
 			<!-- Projects -->
-					<header class="style1">
-						<h2>Projects</h2>
-					</header>
+
+			<section id="Projects" class="wrapper style3">
+				<div class="container">
+					<div class="title">Projects</div>
 					<section id="features">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
@@ -158,18 +160,16 @@
 									</ul>
 								</section>
 							</div>
-						</div>
 						<ul class="actions">
 							<li><a href="projects.html" class="button style3 large">Other</a></li>
 						</ul>
-
+					</div>
 					</section>
-				</div>
 				</div>
 			</section>
 
 			<!-- Highlights -->
-				<section id="highlights" class="wrapper style4">
+				<section id="highlights" class="wrapper style7">
 					<div class="title">Tools</div>
 					<div class="container">
 					<div class="feature-list">
