--- a/index.html
+++ b/index.html
@@ -73,55 +73,13 @@
 								campaigns. I have a passion for remote sensing, GIS and earth observation technology. The integration of observations,
 								theory and data analytics is of great interest to me and hence my expertise.
 							</p>
+
+							<a href="#">
+								<img src="images/timeline.png" alt="" class="img-fluid"/>
+							</a>
+
 						</div>
 					</section>
-
- 			<!-- Timeline-->
-					<section id="Timeline" class="wrapper style5">
-							<div class="container">
-									<ul class="timeline">
-											<li>
-													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/garsfontein.png" alt="..." /></div>
-													<div class="timeline-panel">
-															<div class="timeline-heading">
-																	<h4>2016</h4>
-															</div>
-															<div class="timeline-body"><p class="text-muted">Completed High School diploma at Hoërskool Garsfontein.</p></div>
-													</div>
-											</li>
-											<li class="timeline-inverted">
-													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
-													<div class="timeline-panel">
-															<div class="timeline-heading">
-																	<h4>2019</h4>
-															</div>
-															<div class="timeline-body"><p class="text-muted">Started working at Climatology Research Group (CRG), North-West University (NWU).
-										          Finished undergraduate degree at NWU.</p></div>
-													</div>
-											</li>
-											<li>
-													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
-													<div class="timeline-panel">
-															<div class="timeline-heading">
-																	<h4>2020</h4>
-															</div>
-															<div class="timeline-body"><p class="text-muted">Completed BSc Honours in Environmental Science at NWU whilts working as a research asssitant at the CRG.</p></div>
-													</div>
-											</li>
-											<li class="timeline-inverted">
-													<div class="timeline-image"><img class="rounded-circle img-fluid" src="images/potch.png" alt="..." /></div>
-													<div class="timeline-panel">
-															<div class="timeline-heading">
-																	<h4>2021</h4>
-															</div>
-															<div class="timeline-body"><p class="text-muted">Started working as a research intern at the CRG.
-										          Enrolled for a Masters in Environmental Science in 2022.</p></div>
-													</div>
-											</li>
-									</ul>
-							</div>
-					</section>
-
 
 			<!-- Projects -->
 
