--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 									<a href="projects.html">Projects</a>
 									<ul>
 										<li><a href="projects.html#uaerep">UAEREP Cloud Seeding</a></li>
-										<li><a href="#">NOVA Anglo Air Quality</a></li>
-										<li><a href="#">NWU MRC Vaal Low-Cost Study</a></li>
-										<li><a href="#">World Bank</a></li>
+										<li><a href="projects_continued.html#worldbank">World Bank Source Apportionment</a></li>
+										<li><a href="projects_continued.html#novaanglo">Nova Anglo Air Quality</a></li>
+										<li><a href="projects_continued.html#lcs">NWU MRC Vaal Low-Cost Study</a></li>
+										<li><a href="projects_continued.html#raspberrypi">RaspberryPi Logger</a></li>
+										<li><a href="#">Northam Platinum SmashBlock</a></li>
+										<li><a href="#">NWU Lekwena Weather Radar</a></li>
 									</ul>
 								</li>
 								<li><a href="experience.html">Experience</a></li>
