--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
 									<a href="projects.html">Projects</a>
 									<ul>
 										<li><a href="#uaerep">UAEREP Cloud Seeding</a></li>
+										<li><a href="">RaspberryPi Logger</a></li>
 										<li><a href="#">Nova Anglo Air Quality</a></li>
 										<li><a href="#">NWU MRC Vaal Low-Cost Study</a></li>
 										<li><a href="#">World Bank</a></li>
@@ -53,29 +54,28 @@
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="box">
-
 											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub" class="image left"><img src="images/anglo.jpeg" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub">Nova Institute, Anglo SA and North-West Univeristy air quaity
+														<a href="projects_continued.html" class="image left"><img src="images/anglo.jpeg" alt="" /></a>
+														<h3><a href="projects_continued.html">Nova Institute, Anglo SA and North-West Univeristy air quaity
 																baseline assessment</a></h3>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub" class="image left"><img src="images/mrc.jpg" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub">NWU and Medical Research Council Low-Cost Study</a></h3>
+														<a href="projects_continued.html" class="image left"><img src="images/mrc.jpg" alt="" /></a>
+														<h3><a href="projects_continued.html">NWU and Medical Research Council Low-Cost Study</a></h3>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub" class="image left"><img src="images/wb.jpg" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub">World Bank Source Apportionment</a></h3>
+														<a href="projects_continued.html" class="image left"><img src="images/wb.jpg" alt="" /></a>
+														<h3><a href="projects_continued.html">World Bank Source Apportionment</a></h3>
 													</article>
 												</li>
 											</ul>
-										</section>
+									</section>
 
 								<!-- Sidebar -->
 									<div id="sidebar">
@@ -83,20 +83,26 @@
 											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vTmFmzjP9v__vhPSEJhr_ZVym8kjwuhYnPxKo0XvN0R-ny8Gq5l4BxIQjnT4JGXioFM6_eBFG_mGK4T/pub" class="image left"><img src="images/smashb.jpg" height="20%" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vTmFmzjP9v__vhPSEJhr_ZVym8kjwuhYnPxKo0XvN0R-ny8Gq5l4BxIQjnT4JGXioFM6_eBFG_mGK4T/pub">Nova Institute, Northam Platinum & NWU : Smash Block air quality</a></h3>
+														<a href="projects_continued.html" class="image left"><img src="images/smashb.jpg" height="20%" alt="" /></a>
+														<h3><a href="projects_continued.html">Nova Institute, Northam Platinum & NWU : Smash Block air quality</a></h3>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vQTFAG5WGaaRexh6EXrAWxX1-kHRsXSw7J1a5r-Duvzkl-HVnia2_ymZQLeAlCpdefHx9DyyJEnkICT/pub" class="image left"><img src="images/gobabeb.png" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vQTFAG5WGaaRexh6EXrAWxX1-kHRsXSw7J1a5r-Duvzkl-HVnia2_ymZQLeAlCpdefHx9DyyJEnkICT/pub">Gobabeb Namib Research Institute soil moisture & leaf wettness</a></h3>
+														<a href="projects_continued.html" class="image left"><img src="images/gobabeb.png" alt="" /></a>
+														<h3><a href="projects_continued.html">Gobabeb Namib Research Institute soil moisture & leaf wettness</a></h3>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="https://docs.google.com/document/d/e/2PACX-1vSp5jCxYkwfMHW3XqOK7gU9m6Y3RCXtsfDEs_Y5qBHCyWG5MP4n1IWWqKPycbpVInw0Q6S8RetaEDGO/pub" class="image left"><img src="images/radar.png" alt="" /></a>
-														<h3><a href="https://docs.google.com/document/d/e/2PACX-1vSp5jCxYkwfMHW3XqOK7gU9m6Y3RCXtsfDEs_Y5qBHCyWG5MP4n1IWWqKPycbpVInw0Q6S8RetaEDGO/pub">NWU Lekwena weather radar </a></h3>
+														<a href="projects_continued.html" class="image left"><img src="images/radar.png" alt="" /></a>
+														<h3><a href="projects_continued.html">NWU Lekwena weather radar </a></h3>
+													</article>
+												</li>
+												<li>
+													<article class="box post-excerpt">
+														<a href="projects_continued.html" class="image left"><img src="images/raspberrypi.png" alt="" /></a>
+														<h3><a href="projects_continued.html">RaspberryPi Logger</a></h3>
 													</article>
 												</li>
 											</ul>
