--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/icons8-gps-96.png"/>
 	</head>
+
 	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
 
@@ -49,9 +50,9 @@
 					<div class="title">Most Recent</div>
 					<div class="container">
 						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
+								<div class="col-4 col-12-medium">
 									<div id="sidebar">
 										<section class="box">
 											<ul class="style2">
@@ -74,13 +75,6 @@
 														<h3><a href="projects_continued.html">World Bank Source Apportionment</a></h3>
 													</article>
 												</li>
-											</ul>
-									</section>
-
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="box">
-											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
 														<a href="projects_continued.html" class="image left"><img src="images/smashb.jpg" height="20%" alt="" /></a>
@@ -106,13 +100,12 @@
 													</article>
 												</li>
 											</ul>
-										</section>
-									</div>
+									</section>
+								</div>
 							</div>
-						</div>
-							<div class="col-8 col-12-medium imp-medium">
 
 								<!-- Content -->
+								<div class="col-8 col-12-medium imp-medium">
 									<div id="content">
 										<article class="box post">
 											<header class="style1" id="uaerep">
@@ -127,39 +120,24 @@
 											</iframe>
 										</p>
 										</article>
-											</div>
-										</div>
 									</div>
-
 							</div>
-						</div>
+
 					</div>
-				</section>
+			</div>
+	 </section>
 
 				<!-- Footer -->
 					<section id="footer" class="wrapper">
 						<div class="title"><a href=index.html>HOME</a></div>
 						<div class="container">
-							</div>
-
 							<div id="copyright">
 								<ul>
-									<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; GerhardtB</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 						</div>
-					</section>
-
-						</div>
-						<div id="copyright">
-							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</div>
 				</section>
-
-		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -169,5 +147,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+		</div>
 	</body>
 </html>
