--- a/projects_continued.html
+++ b/projects_continued.html
@@ -50,12 +50,11 @@
 					<div class="title">Continued</div>
 					<div class="container">
 						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
+								<div class="col-4 col-12-medium">
 									<div id="sidebar">
 										<section class="box">
-
 											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
@@ -76,13 +75,6 @@
 														<h3><a href="">World Bank Source Apportionment</a></h3>
 													</article>
 												</li>
-											</ul>
-										</section>
-
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="box">
-											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
 														<a href="" class="image left"><img src="images/smashb.jpg" height="20%" alt="" /></a>
@@ -105,91 +97,84 @@
 										</section>
 									</div>
 							</div>
-						</div>
-							<div class="col-8 col-12-medium imp-medium">
 
-								<!-- Content -->
-									<div  id="content">
-										<article class="box post">
-											<header class="style1">
-												<h2> World Bank and North-West Univeristy Source Apportionment in the Greater Johannesburg Area (GJA) </h2>
-												<p> An Overview</p>
-											</header>
-											<a href="#" class="image featured">
-												<!-- img src="" alt="" -->
-											</a>
-											<p align="center">
-											<iframe src="https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub?embedded=true" width="100%" height="800px">
-											</iframe>
-										</p>
-										</article>
-									</div>
+							<!-- Content -->
+							  <div class="col-8 col-12-medium imp-medium">
+								<div  id="content">
+									<article class="box post">
+										<header class="style1">
+											<h2> World Bank and North-West Univeristy Source Apportionment in the Greater Johannesburg Area (GJA) </h2>
+											<p> An Overview</p>
+										</header>
+										<a href="#" class="image featured">
+											<!-- img src="" alt="" -->
+										</a>
+										<p align="center">
+										<iframe src="https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub?embedded=true" width="100%" height="800px">
+										</iframe>
+									</p>
+									</article>
 								</div>
 							</div>
+
 						</div>
 					</div>
-				</div>
-			</section>
-			<section class="wrapper style3">
-				<div class="title">More</div>
-													<div id="novaanglo" class="container">
-															<header class="style1">
-																<h2> Nova Institute, Anglo SA and North-West Univeristy air quaity
-																		baseline assessment </h2>
-																<p> An Overview</p>
-															</header>
-														 <div class="iframe-container">
-															<iframe src= "https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub?embedded=true" width="800px" height="800px">
-															</iframe>
-														</div>
-													</div>
-
-														<div id="lcs" class="container">
-																<header class="style1">
-																	<h2> NWU and Medical Research Council Low-Cost Study </h2>
-																	<p> An Overview</p>
-																</header>
-																<div class="iframe-container">
-																<iframe src= "https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub?embedded=true" width="800px" height="800px">
-																</iframe>
-																<div>
-													</div>
-															<div id="raspberryp" class="container">
-																	<header class="style1">
-																		<h2> RaspberryPi Logger</h2>
-																		<p> An Overview</p>
-																	</header>
-																	<div class="iframe-container">
-																	<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTu1DCqGOe5Osht8gkkW2WuTLL16yRCSJ5PwftfFvXFSL_vuwvM4ryC01_UKubmaPPqELPEAf3u0JpF/pub?embedded=true" width="800px" height="800px">
-																	</iframe>
-																</div>
-														</div>
 				</section>
 
+
+
+
+
+				<section class="wrapper style3">
+					<div class="title">More</div>
+						<div id="novaanglo" class="container">
+							<header class="style1">
+								<h2> Nova Institute, Anglo SA and North-West Univeristy air quaity baseline assessment </h2>
+										<p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+								<iframe src= "https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub?embedded=true" width="800px" height="800px">
+								</iframe>
+						 </div>
+					</div>
+
+				  <div id="lcs" class="container">
+						<header class="style1">
+							<h2> NWU and Medical Research Council Low-Cost Study </h2>
+							<p> An Overview</p>
+					 </header>
+					 <div class="iframe-container">
+						<iframe src= "https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub?embedded=true" width="800px" height="800px">
+						</iframe>
+				  </div>
+        </div>
+
+			  <div id="raspberryp" class="container">
+				 <header class="style1">
+						<h2> RaspberryPi Logger</h2>
+						<p> An Overview</p>
+				</header>
+					<div class="iframe-container">
+					<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTu1DCqGOe5Osht8gkkW2WuTLL16yRCSJ5PwftfFvXFSL_vuwvM4ryC01_UKubmaPPqELPEAf3u0JpF/pub?embedded=true" width="800px" height="800px">
+					</iframe>
+			    </div>
+		    </div>
+		 </section>
+
 				<!-- Footer -->
-					<section id="footer" class="wrapper">
-						<div class="title"><a href=index.html>HOME</a></div>
-						<div class="container">
-							</div>
-
-							<div id="copyright">
-								<ul>
-									<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-						</div>
+				<section id="footer" class="wrapper">
+					<div class="title"><a href=index.html>HOME</a></div>
+					<div class="container">
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; GerhardtB</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</div>
-				</section>
+			</section>
 
-		</div>
+
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -199,5 +184,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+		</div>
 	</body>
 </html>
