--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<div class="container">
 							<p>
 								Recent advances in remote sensing technology and earth observation sciences has enabled us to study pressing
-								problems with great detail. My career as a junior environmental science professional began in November 2019
+								problems with great detail. My career as a junior environmental science professional started in November 2019
 								when I started working at the North-West University, Climatology Research Group whilst
 								completing my undergraduate studies. Since, I have been actively involved in several multi-disciplinary projects and research
 								campaigns. I have a passion for remote sensing, GIS and earth observation technology. The integration of observations,
