--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="container">
 
 													<a href="#">
-														<img src="images/introduction.png" alt="" class="img-fluid"/>
+														<img src="images/introduction01.png" alt="" class="img-fluid"/>
 													</a>
 
 						<p class="style3">I am a junior environmental science professional with a passion for remote sensing and geoscience</p>
