--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 														<img src="images/introduction_01.png" alt="" class="img-fluid"/>
 													</a>
 
-						<p class="style3">I am a junior environmental science professional with a passion for remote sensing and geoscience</p>
+						<p class="style3">I am a junior environmental science professional with a passion for remote sensing, earth observation and data science</p>
 					</div>
 			</section>
 
