--- a/experience.html
+++ b/experience.html
@@ -56,8 +56,11 @@
 									</header>
 									<a href="#" class="image featured">
 									</a>
-									<iframe src="images/GBotha_CV_Comprehensive.pdf" width="100%" height="800px">
+									<p align="center">
+									<iframe style="border: none;" src="https://docs.google.com/document/d/e/2PACX-1vQeyG-1m6Jh7yuFLfJeuNEO7SzwdE2EUmUGcN7CuLe65l2vqKSx29AiAK1Phtouxh1H4A4Bxtst6TOt/pub?embedded=true"
+														width="80%" height="800px" allow="autoplay" >
 									</iframe>
+								</p>
 								</article>
 							</div>
 
