--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 		<link rel="icon" href="images/icons8-gps-96.png"/>
 	</head>
 
-	<body class="left-sidebar is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -31,11 +31,13 @@
 								<li>
 									<a href="projects.html">Projects</a>
 									<ul>
-										<li><a href="#uaerep">UAEREP Cloud Seeding</a></li>
-										<li><a href="">RaspberryPi Logger</a></li>
-										<li><a href="#">Nova Anglo Air Quality</a></li>
-										<li><a href="#">NWU MRC Vaal Low-Cost Study</a></li>
-										<li><a href="#">World Bank</a></li>
+										<li><a href="projects.html#uaerep">UAEREP Cloud Seeding</a></li>
+										<li><a href="projects.html#worldbank">World Bank Source Apportionment</a></li>
+										<li><a href="projects.html#novaanglo">Nova Anglo Air Quality</a></li>
+										<li><a href="projects.html#lcs">NWU MRC Vaal Low-Cost Study</a></li>
+										<li><a href="projects.html#raspberrypi">RaspberryPi Logger</a></li>
+										<li><a href="projects.html#smashb">Northam Platinum SmashBlock</a></li>
+										<li><a href="projects.html#lradar">NWU Lekwena Weather Radar</a></li>
 									</ul>
 								</li>
 								<li class="current"><a href="experience.html">Experience</a></li>
@@ -45,87 +47,99 @@
 
 				</section>
 
-			<!-- Main -->
-				<section id="main" class="wrapper style2">
-					<div class="title">Most Recent</div>
-					<div class="container">
-						<div class="row gtr-150">
 
-								<!-- Sidebar -->
-								<div class="col-4 col-12-medium">
-									<div id="sidebar">
-										<section class="box">
-											<ul class="style2">
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/anglo.jpeg" alt="" /></a>
-														<h3><a href="projects_continued.html">Nova Institute, Anglo SA and North-West Univeristy air quaity
-																baseline assessment</a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/mrc.jpg" alt="" /></a>
-														<h3><a href="projects_continued.html">NWU and Medical Research Council Low-Cost Study</a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/wb.jpg" alt="" /></a>
-														<h3><a href="projects_continued.html">World Bank Source Apportionment</a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/smashb.jpg" height="20%" alt="" /></a>
-														<h3><a href="projects_continued.html">Nova Institute, Northam Platinum & NWU : Smash Block air quality</a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/gobabeb.png" alt="" /></a>
-														<h3><a href="projects_continued.html">Gobabeb Namib Research Institute soil moisture & leaf wettness</a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/radar.png" alt="" /></a>
-														<h3><a href="projects_continued.html">NWU Lekwena weather radar </a></h3>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects_continued.html" class="image left"><img src="images/raspberrypi.png" alt="" /></a>
-														<h3><a href="projects_continued.html">RaspberryPi Logger</a></h3>
-													</article>
-												</li>
-											</ul>
-									</section>
-								</div>
+
+
+
+	<section class="wrapper style3">
+	<div class="title">Recent</div>
+	<div class="container">
+
+	<div id="uaerep" class="container">
+							<header class="style1">
+							 <h2>Unmanned Arial Systems (UAS) for cloud seeding operations</h2>
+									 <p>The UAE Research Programme for Rain Enhancement Science</p>
+							</header>
+							<a href="#" class="image featured">
+								<img src="images/cs.png" alt="" />
+							</a>
+							<div class="iframe-container">
+							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vQ-FQthT4pEk7ZER5mUDdgIpjwtGERJdCP99e3R9Cy8Vw8J35sLxwo7qypFumWUq3lwH-E_DNNZzR_y/pub?embedded=true" width="800px" height="800px">
+							 </iframe>
+							</div>
 							</div>
 
-								<!-- Content -->
-								<div class="col-8 col-12-medium imp-medium">
-									<div id="content">
-										<article class="box post">
-											<header class="style1" id="uaerep">
-												<h2>Unmanned Arial Systems (UAS) for cloud seeding operations</h2>
-												<p>The UAE Research Programme for Rain Enhancement Science</p>
-											</header>
-											<a href="#" class="image featured">
-												<img src="images/cs.png" alt="" />
-											</a>
-											<p align="center">
-											<iframe src="https://docs.google.com/document/d/e/2PACX-1vQ-FQthT4pEk7ZER5mUDdgIpjwtGERJdCP99e3R9Cy8Vw8J35sLxwo7qypFumWUq3lwH-E_DNNZzR_y/pub?embedded=true" width="100%" height="800px">
-											</iframe>
-										</p>
-										</article>
-									</div>
+
+							<div id="worldbank" class="container">
+							<header class="style1">
+							 <h2>World Bank and North-West Univeristy Source Apportionment in the Greater Johannesburg Area (GJA)</h2>
+									 <p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub?embedded=true" width="800px" height="800px">
+							 </iframe>
+							</div>
 							</div>
 
-					</div>
-			</div>
-	 </section>
+
+							<div id="novaanglo" class="container">
+							<header class="style1">
+							 <h2> Nova Institute, Anglo SA and North-West Univeristy air quaity baseline assessment </h2>
+									 <p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub?embedded=true" width="800px" height="800px">
+							 </iframe>
+							</div>
+							</div>
+
+							<div id="lcs" class="container">
+							<header class="style1">
+							<h2> NWU and Medical Research Council Low-Cost Study </h2>
+							<p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub?embedded=true" width="800px" height="800px">
+							</iframe>
+							</div>
+							</div>
+
+							<div id="raspberrypi" class="container">
+							<header class="style1">
+							<h2> RaspberryPi Logger</h2>
+							<p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTu1DCqGOe5Osht8gkkW2WuTLL16yRCSJ5PwftfFvXFSL_vuwvM4ryC01_UKubmaPPqELPEAf3u0JpF/pub?embedded=true" width="800px" height="800px">
+							</iframe>
+							</div>
+							</div>
+
+							<div id="smashb" class="container">
+							<header class="style1">
+							<h2> Northam Platinum SmashBlock</h2>
+							<p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTmFmzjP9v__vhPSEJhr_ZVym8kjwuhYnPxKo0XvN0R-ny8Gq5l4BxIQjnT4JGXioFM6_eBFG_mGK4T/pub?embedded=true" width="800px" height="800px">
+							</iframe>
+							</div>
+							</div>
+
+							<div id="lradar" class="container">
+							<header class="style1">
+							<h2> NWU Lekwena Weather Radar</h2>
+							<p> An Overview</p>
+							</header>
+							<div class="iframe-container">
+							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vSp5jCxYkwfMHW3XqOK7gU9m6Y3RCXtsfDEs_Y5qBHCyWG5MP4n1IWWqKPycbpVInw0Q6S8RetaEDGO/pub?embedded=true" width="800px" height="800px">
+							</iframe>
+							</div>
+							</div>
+
+		</div>
+</section>
+
 
 				<!-- Footer -->
 					<section id="footer" class="wrapper">
