--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
 
 							<div id="novaanglo" class="container">
 							<header class="style1">
-							 <h2> Nova Institute, Anglo SA and North-West Univeristy air quaity baseline assessment </h2>
+							 <h2> Nova Institute, Anglo SA and North-West Univeristy Air Quaity Baseline Assessment </h2>
 									 <p> An Overview</p>
 							</header>
 							<div class="iframe-container">
