--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 
 	<div id="uaerep" class="container">
 							<header class="style1">
-							 <h2>Unmanned Arial Systems (UAS) for cloud seeding operations</h2>
+							 <h2>Unmanned Arial Systems (UAS) for Cloud Seeding Operations</h2>
 									 <p>The UAE Research Programme for Rain Enhancement Science</p>
 							</header>
 							<a href="#" class="image featured">
@@ -84,7 +84,7 @@
 
 							<div id="novaanglo" class="container">
 							<header class="style1">
-							 <h2> Nova Institute, Anglo SA and North-West Univeristy Air Quaity Baseline Assessment </h2>
+							 <h2> Nova Institute, Anglo SA and North-West Univeristy Air Quality Baseline Assessment </h2>
 									 <p> An Overview</p>
 							</header>
 							<div class="iframe-container">
