--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
 
 							<div id="novaanglo" class="container">
 							<header class="style1">
-							 <h2> Nova Institute, Anglo SA and North-West Univeristy Air Quality Baseline Assessment </h2>
+							 <h2> Nova Institute, Anglo SA and North-West University Air Quality Baseline Assessment </h2>
 									 <p> An Overview</p>
 							</header>
 							<div class="iframe-container">
@@ -134,7 +134,7 @@
 							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vRycpm1z8oFHjTRfshNhp7endbQeHANxqeEajMj-weAdexOHbdxGKQvdXSuT71r9IXTjAdiZH3XNOo4/pub?embedded=true" width="800px" height="800px">
 							</iframe>
 							</div>
-							</div>						
+							</div>
 		</div>
 </section>
 
