--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 			<!-- Projects -->
 
-			<section id="Projects" class="wrapper style3">
+			<section id="Recent Projects" class="wrapper style3">
 				<div class="container">
 					<div class="title">Projects</div>
 					<section id="features">
