--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
 			<!-- Projects -->
 
-			<section id="Recent Projects" class="wrapper style3">
+			<section id="Projects" class="wrapper style3">
 				<div class="container">
-					<div class="title">Projects</div>
+					<div class="title" >Recent Projects</div>
 					<section id="features">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
@@ -125,12 +125,10 @@
 									</ul>
 								</section>
 							</div>
-
-
-						<ul class="actions" align=center>
-							<li><a href="projects.html" class="button style3 large">Other</a></li>
-						</ul>
 					</div>
+					<ul class="actions" align=center>
+						<li><a href="projects.html" class="button style3 large">Other</a></li>
+					</ul>
 					</section>
 				</div>
 			</section>
