--- a/experience.html
+++ b/experience.html
@@ -36,6 +36,7 @@
 										<li><a href="#">World Bank</a></li>
 									</ul>
 								</li>
+								<li><a href="code.html">Code</a></li>
 								<li><a href="experience.html">Experience</a></li>
 							 <li><a href="index.html#footer">Contact</a></li>
 							</ul>
