--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 										<li><a href="projects.html#lradar">NWU Lekwena Weather Radar</a></li>
 									</ul>
 								</li>
+								<li><a href="code.html">Code</a></li>
 								<li><a href="experience.html">Experience</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
