--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
 										<li><a href="projects.html#lradar">NWU Lekwena Weather Radar</a></li>
 									</ul>
 								</li>
+								<li><a href="code.html">Code</a></li>
 								<li class="current"><a href="experience.html">Experience</a></li>
 								<li><a href="index.html#footer">Contact</a></li>
 							</ul>
