--- a/code.html
+++ b/code.html
@@ -52,7 +52,7 @@
 
 
 
-	<section class="wrapper style3">
+	<section class="wrapper style2">
 	<div class="title">Recent</div>
 	<div class="container">
 
@@ -60,27 +60,28 @@
 
 									<div id="lcs" class="container">
 									<header class="style1">
-									<h2> NWU and Medical Research Council Low-Cost Study </h2>
-									<p> An Overview</p>
+									<h2>Low-Cost air quality sensors in South Africa (LCS-SA) </h2>
 									</header>
-									<p> The NWU and Medical Research Council study aimed to evalute the accuracy of low-cost air quality monitors.
-											<a href="2021_LCS-SA_VanderbijilparkCampus.html">Data Ingest and Quality Control</a>
-									</p>
+									<article clas="box post">
+										The LCS-SA project aimed to determine the precision, accuracy, reliability, rigidity and usability of low-cost air quality sensors within a South African setting.
+										A total of 28 low-cost air quality instruments were installed next to the Vanderbijilpark reference station. The project involved multiple stakeholders and instrument manufacturers that required the testing of instruments.
+										A report on the instrument performance was compiled for each stakeholder. The data analysis for this project was completed using two workflows.
+
+									<header class="style1"><h3>1. Data Ingest and Quality Control</h3>
+										The first workflow entailed the ingest and quality control of the instrument data.This is shown in the first Jupyter Notebook displayed here, and can also be seen @ <a href="2021_LCS-SA_VanderbijilparkCampus.html">Data Ingest and Quality Control</a>.
+										Initial analysis for all instrument is shown in Section 1.7.
+									</header>
+									<br>
+									<div class="iframe-container">
+									 <iframe src= "https://gerhardtb.github.io/gerhardtbotha/2021_LCS-SA_VanderbijilparkCampus.html" width="100%" height="800px">
+									 </iframe>
 									</div>
 
-	<div id="uaerep" class="container">
-							<header class="style1">
-							 <h2>Unmanned Arial Systems (UAS) for Cloud Seeding Operations</h2>
-									 <p>The UAE Research Programme for Rain Enhancement Science</p>
-							</header>
-							<a href="#" class="image featured">
-								<img src="images/cs.png" alt="" />
-							</a>
-							<div class="iframe-container">
-							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vQ-FQthT4pEk7ZER5mUDdgIpjwtGERJdCP99e3R9Cy8Vw8J35sLxwo7qypFumWUq3lwH-E_DNNZzR_y/pub?embedded=true" width="800px" height="800px">
-							 </iframe>
-							</div>
-							</div>
+									<header class="style1"><h3>2. Individual stakeholder report analysis</h3></header>
+
+
+								</article>
+									</div>
 
 
 							<div id="worldbank" class="container">
@@ -88,57 +89,7 @@
 							 <h2>World Bank and North-West Univeristy Source Apportionment in the Greater Johannesburg Area (GJA)</h2>
 									 <p> An Overview</p>
 							</header>
-							<div class="iframe-container">
-							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vQzqxbpJxxq_pSOlSo27y7amFInK6rUILF0AM4_lYjSFfrl2PZmIk20gGpx4Vrhjw4msBeEUUK_r-lF/pub?embedded=true" width="800px" height="800px">
-							 </iframe>
 							</div>
-							</div>
-
-
-							<div id="novaanglo" class="container">
-							<header class="style1">
-							 <h2> Nova Institute, Anglo SA and North-West Univeristy Air Quality Baseline Assessment </h2>
-									 <p> An Overview</p>
-							</header>
-							<div class="iframe-container">
-							 <iframe src= "https://docs.google.com/document/d/e/2PACX-1vS0AKA2z19zqoMaCWUYWsQYJZDshZmx5FRSz__RKzBc-f738SAcmByeUHqSkRndzRMbFx3EUelAuy0V/pub?embedded=true" width="800px" height="800px">
-							 </iframe>
-							</div>
-							</div>
-
-							<div id="smashb" class="container">
-							<header class="style1">
-							<h2> Northam Platinum SmashBlock</h2>
-							<p> An Overview</p>
-							</header>
-							<div class="iframe-container">
-							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTmFmzjP9v__vhPSEJhr_ZVym8kjwuhYnPxKo0XvN0R-ny8Gq5l4BxIQjnT4JGXioFM6_eBFG_mGK4T/pub?embedded=true" width="800px" height="800px">
-							</iframe>
-							</div>
-							</div>
-
-							<div id="lradar" class="container">
-							<header class="style1">
-							<h2> NWU Lekwena Weather Radar</h2>
-							<p> An Overview</p>
-							</header>
-							<div class="iframe-container">
-							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vSp5jCxYkwfMHW3XqOK7gU9m6Y3RCXtsfDEs_Y5qBHCyWG5MP4n1IWWqKPycbpVInw0Q6S8RetaEDGO/pub?embedded=true" width="800px" height="800px">
-							</iframe>
-							</div>
-							</div>
-
-							<div id="raspberrypi" class="container">
-							<header class="style1">
-							<h2> RaspberryPi Logger</h2>
-							<p> An Overview</p>
-							</header>
-							<div class="iframe-container">
-							<iframe src= "https://docs.google.com/document/d/e/2PACX-1vTu1DCqGOe5Osht8gkkW2WuTLL16yRCSJ5PwftfFvXFSL_vuwvM4ryC01_UKubmaPPqELPEAf3u0JpF/pub?embedded=true" width="800px" height="800px">
-							</iframe>
-							</div>
-							</div>
-
 
 		</div>
 </section>
