--- a/code.html
+++ b/code.html
@@ -77,7 +77,15 @@
 									 </iframe>
 									</div>
 
-									<header class="style1"><h3>2. Individual stakeholder report analysis</h3></header>
+									<header class="style1"><h3>2. Individual Stakeholder Analysis</h3>
+										The second workflow entailed the analysis of the instrument data for individual stakeholder reports. This is shown in the Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus_Report.html">Data Ingest and Quality Control</a>.
+										Initial analysis for all instrument is shown in Section 1.7.
+									</header>
+									<br>
+									<div class="iframe-container">
+									 <iframe src= "https://gerhardtb.github.io/gerhardtbotha/2021_LCS-SA_VanderbijilparkCampus_Report.html" width="100%" height="800px">
+									 </iframe>
+									</div>
 
 
 								</article>
