--- a/code.html
+++ b/code.html
@@ -68,7 +68,7 @@
 										A report on the instrument performance was compiled for each stakeholder. The data analysis for this project was completed using two workflows.
 
 									<header class="style1"><h3>1. Data Ingest and Quality Control</h3>
-										The first workflow entailed the ingest and quality control of the instrument data.This is shown in the first Jupyter Notebook displayed here, and can also be seen @ <a href="2021_LCS-SA_VanderbijilparkCampus.html">Data Ingest and Quality Control</a>.
+										The first workflow entailed the ingest and quality control of the instrument data.This is shown in the first Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus.html">Data Ingest and Quality Control</a>.
 										Initial analysis for all instrument is shown in Section 1.7.
 									</header>
 									<br>
@@ -78,8 +78,8 @@
 									</div>
 
 									<header class="style1"><h3>2. Individual Stakeholder Analysis</h3>
-										The second workflow entailed the analysis of the instrument data for individual stakeholder reports. This is shown in the Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus_Report.html">Data Ingest and Quality Control</a>.
-										Initial analysis for all instrument is shown in Section 1.7.
+										The second workflow entailed the analysis of the instrument data for individual stakeholder reports. This is shown in the Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus_Report.html">Individual Stakeholder Analysis</a>.
+										Further analysis is still ongoing. 
 									</header>
 									<br>
 									<div class="iframe-container">
