--- a/code.html
+++ b/code.html
@@ -61,12 +61,16 @@
 									<div id="lcs" class="container">
 									<header class="style1">
 									<h2>Low-Cost air quality sensors in South Africa (LCS-SA) </h2>
+									The LCS-SA project aimed to determine the precision, accuracy, reliability, rigidity and usability of low-cost air quality sensors within a South African setting.
+								<br>	A total of 28 low-cost air quality instruments were installed next to the Vanderbijilpark reference station (Figure 1-1). The project involved multiple stakeholders and instrument manufacturers that required the testing of instruments.
+									A report on the instrument performance was compiled for each stakeholder. The data analysis for this project was completed using two workflows.
 									</header>
 									<article clas="box post">
-										The LCS-SA project aimed to determine the precision, accuracy, reliability, rigidity and usability of low-cost air quality sensors within a South African setting.
-										A total of 28 low-cost air quality instruments were installed next to the Vanderbijilpark reference station. The project involved multiple stakeholders and instrument manufacturers that required the testing of instruments.
-										A report on the instrument performance was compiled for each stakeholder. The data analysis for this project was completed using two workflows.
 
+										<a href="images/lcs_site.png" class="image centered">
+											<img src="images/lcs_site.png" alt="Figure 1-1" height=450px/>
+											Figure 1-1:			Low-cost instruments at the NWU Vanderbijilpark station.
+										</a>
 									<header class="style1"><h3>1. Data Ingest and Quality Control</h3>
 										The first workflow entailed the ingest and quality control of the instrument data.This is shown in the first Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus.html">Data Ingest and Quality Control</a>.
 										Initial analysis for all instrument is shown in Section 1.7.
@@ -79,25 +83,46 @@
 
 									<header class="style1"><h3>2. Individual Stakeholder Analysis</h3>
 										The second workflow entailed the analysis of the instrument data for individual stakeholder reports. This is shown in the Jupyter Notebook displayed here, and can also be seen at <a href="2021_LCS-SA_VanderbijilparkCampus_Report.html">Individual Stakeholder Analysis</a>.
-										Further analysis is still ongoing. 
+										Further analysis is still ongoing.
 									</header>
 									<br>
 									<div class="iframe-container">
 									 <iframe src= "https://gerhardtb.github.io/gerhardtbotha/2021_LCS-SA_VanderbijilparkCampus_Report.html" width="100%" height="800px">
 									 </iframe>
 									</div>
-
-
 								</article>
+								<font size="3">
+								This code was compiled together with:
+								<ul>
+								<li> Roelof Burger </li>
+								<li> Brigitte Language </li>
+								<li> Aneska Richter </li>
+								<li> Daniella Kristensen </li>
+								<li> Victor Vepener </li>
+								</ul>
+							</font>
 									</div>
 
 
 							<div id="worldbank" class="container">
 							<header class="style1">
-							 <h2>World Bank and North-West Univeristy Source Apportionment in the Greater Johannesburg Area (GJA)</h2>
-									 <p> An Overview</p>
+							 <h2>South African Highveld Air Quality</h2>
+							 This study aims to investigate the air quality monitoring data of all the air quality stations on the South African Highveld. The Jupyter Notebook provides an introduction to some of the
+							 preliminary analysis that has been done. The study is, however, still ongoing and subject to futher analysis.
 							</header>
+							<br>
+							<div class="iframe-container">
+							 <iframe src= "https://gerhardtb.github.io/gerhardtbotha/SAAQIS.html" width="100%" height="800px">
+							 </iframe>
 							</div>
+
+						<font size="3">
+						This code was compiled with the help of:
+						<ul>
+						<li> Roelof Burger </li>
+						</ul>
+					</font>
+					</div>
 
 		</div>
 </section>
