--- a/code.html
+++ b/code.html
@@ -68,7 +68,7 @@
 									<article clas="box post">
 
 										<a href="images/lcs_site.png" class="image centered">
-											<img src="images/lcs_site.png" alt="Figure 1-1" height=450px/>
+											<img src="images/lcs_site.PNG" alt="Figure 1-1" height=450px/>
 											Figure 1-1:			Low-cost instruments at the NWU Vanderbijilpark station.
 										</a>
 									<header class="style1"><h3>1. Data Ingest and Quality Control</h3>
@@ -104,7 +104,7 @@
 									</div>
 
 
-							<div id="worldbank" class="container">
+							<div id="saaqis" class="container">
 							<header class="style1">
 							 <h2>South African Highveld Air Quality</h2>
 							 This study aims to investigate the air quality monitoring data of all the air quality stations on the South African Highveld. The Jupyter Notebook provides an introduction to some of the
