--- a/code.html
+++ b/code.html
@@ -67,7 +67,7 @@
 									</header>
 									<article clas="box post">
 
-										<a href="images/lcs_site.png" class="image centered">
+										<a href="images/lcs_site.PNG" class="image centered">
 											<img src="images/lcs_site.PNG" alt="Figure 1-1" height=450px/>
 											Figure 1-1:			Low-cost instruments at the NWU Vanderbijilpark station.
 										</a>
