--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 								<li>
 									<a href="projects.html">Projects</a>
 									<ul>
+										<li><a href="projects.html#uaerep">Verified Carbon Standard, Pre-Scoping Studies</a></li>
+										<li><a href="projects.html#uaerep">Fraction of Non-Renewable Biomass (fNRB)</a></li>
+										<li><a href="projects.html#uaerep">Mauritius Invasive Alien SDM</a></li>
 										<li><a href="projects.html#uaerep">UAEREP Cloud Seeding</a></li>
 										<li><a href="projects.html#worldbank">World Bank Source Apportionment</a></li>
 										<li><a href="projects.html#novaanglo">Nova Anglo Air Quality</a></li>
@@ -57,7 +60,7 @@
 														<img src="images/introduction_01.png" alt="" class="img-fluid" width="45%"/>
 													</a>
 
-						<p class="style3">I am a junior geospatial data scientist with a passion for technology, earth observation and data science.</p>
+						<p class="style3">I am a geospatial data scientist with a passion for technology, earth observation and data science.</p>
 					</div>
 			</section>
 
@@ -70,11 +73,11 @@
 							</header>
 							<div class="container">
 							<p>
-								Recent advances in remote sensing technology and earth observation has enabled us to study pressing
-								problems with great detail. My career as a junior geospatial data scientist started in November 2019
+								My career as a geospatial data scientist started in November 2019
 								when I started working at the North-West University, Climatology Research Group whilst
-								completing my undergraduate studies. Since, I have been working as a geospatial data scientist at C4 EcoSolutions. I have a passion for remote sensing, GIS and earth observation technology. The integration of observations,
-								theory and data analytics is of great interest to me and hence my expertise.
+								completing my undergraduate and postgraduate studies. Since, I have been working as a data scientist at C4 EcoSolutions. 
+								My primary focus is on utilizing remote sensing, GIS, and earth observation technology to develop automated solutions for the carbon and climate sector. 
+								
 							</p>
 
 							<div class="row">
