change contact form, links

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
-														North-West University<br />
-														11 Hoffman Street, Potchefstroom<br />
-														2520
+														C4 EcoSolutions<br />
+														22137 St Andrews Drive, Cape Town<br />
+														7140
 													</p>
 												</section>
 											</div>
@@ -330,7 +330,7 @@
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
 														<a href="https://github.com/GerhardtB">github.com/GerhardtB</a><br />
-														<a href="www.linkedin.com/in/gerhardt-botha">linkedin.com/in/gerhardt-botha</a><br />
+														<a href="https://linkedin.com/in/gerhardt-botha">linkedin.com/in/gerhardt-botha</a><br />
 														<a href="https://twitter.com/gerhardt_btha">twitter.com/gerhardt_btha</a>
 													</p>
 												</section>
