--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Gerhardt Botha</a></h1>
-							<p>Junior geospatial data scientist</p>
+							<p>Geospatial data scientist</p>
 						</div>
 
 					<!-- Nav -->
